# RealitMixte

./: Ball.hpp  CMakeLists.txt  Calibrate.cpp  SceneObjects.cpp  SceneObjects.hpp  app  arcube  calibrate  camera.yaml  charucot  charucot.cpp  charucot2.cpp  main.cpp
ARMatrices/: ar_matrices.cpp  ar_matrices.hpp
GLUtils/: gl_utils.cpp  gl_utils.hpp
Geometries/: geometries.cpp  geometries.hpp
Shaders/: shaders.cpp  shaders.hpp
Smoothing/: smoothing.cpp  smoothing.hpp
Texture/: texture.cpp  texture.hpp
UtilsOpenCV/: opencv_utils.cpp  opencv_utils.hpp
